changed dto for payment
